[package]
name = "stackpin"
version = "0.0.2"
authors = ["Louis Dureuil <louis.dureuil@xinra.net>"]
license = "MIT OR Apache-2.0"
description = "Crate for data that should be pinned to the stack at the point of declaration."
repository = "https://github.com/dureuill/stackpin"
documentation = "https://docs.rs/stackpin"
readme = "README.md"
keywords = ["pin", "ownership", "self", "reference"]
categories = ["rust-patterns"]
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
